Clean up and removed unused parts

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 #
 # Project settings
 #
-group = no.item.xp
+group = no.rbrastad.xp
 projectName = app-bootstrap3-agency
-appName = no.item.xp.starter.bootstrap3.agency
+appName = no.rbrastaf.xp.bootstrap3.agency
 displayName = Bootstrap 3 Agency APP
 xpVersion = 6.5.1
 version = 0.6.0
